Allow patch to create new files
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22592 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -48,7 +48,7 @@ $(KERNEL_WORK)/src.done: $(KERNEL_DIST)
 	tar xzf $(KERNEL_DIST) --directory=$(KERNEL_WORK)
 	mv $(KERNEL_SRC) $(KERNEL_SRC).orig
 	tar xzf $(KERNEL_DIST) --directory=$(KERNEL_WORK)
-	if [ -f $(KERNEL_PATCH) ] ; then cd $(KERNEL_SRC) && patch -b -p0 <../../$(KERNEL_PATCH) ; fi
+	if [ -f $(KERNEL_PATCH) ] ; then cd $(KERNEL_SRC) && patch -p0 <../../$(KERNEL_PATCH) ; fi
 	touch $@
 
 src: $(KERNEL_WORK)/src.done
@@ -58,11 +58,12 @@ src: $(KERNEL_WORK)/src.done
 # Update patch file
 
 patches: $(KERNEL_WORK)/src.done
-	-diff -r -u --no-dereference $(KERNEL_SRC).orig $(KERNEL_SRC) >$(KERNEL_PATCH)
+	-diff -r -u --new-file --no-dereference $(KERNEL_SRC).orig $(KERNEL_SRC) >$(KERNEL_PATCH)
 	sed -i 's#$(KERNEL_SRC).orig/##g'	$(KERNEL_PATCH)
 	sed -i 's#$(KERNEL_SRC)/##g'		$(KERNEL_PATCH)
 	sed -i '/^diff -r -u/d'			$(KERNEL_PATCH)
-	sed -i '/^Only in.*orig$$/d'		$(KERNEL_PATCH)
+	sed -i 's/\t*202[0-9].*0800$$//g'	$(KERNEL_PATCH)
+	sed -i 's/^\-\-\-.*$$/&.orig/g'		$(KERNEL_PATCH)
 
 ###############################################################################
 
