--- a/boot/OrangePiZero2W/overlays/MUNTS-0018.dts
+++ b/boot/OrangePiZero2W/overlays/MUNTS-0018.dts
@@ -5,16 +5,7 @@
 /plugin/;
 
 / {
-	// Enable I2C1 on GPIO264 and GPIO263 aka Raspberry Pi GPIO2 and GPIO3
-
-	fragment@0 {
-		target = <&i2c1>;
-		__overlay__ {
-			pinctrl-names = "default";
-			pinctrl-0 = <&i2c1_pi_pins>;
-			status = "okay";
-		};
-	};
+	compatible = "xunlong,orangepi-zero2w";
 
 	// Enable PWM1 on GPIO267 aka Raspberry Pi GPIO12
 	// and    PWM2 on GPIO268 aka Raspberry Pi GPIO13
