Fixed typo in mrproper target.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22602 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -90,7 +90,7 @@ menuconfig: $(KERNEL_WORK)/src.done
 	cp $(KERNEL_SRC)/.config $(KERNEL_CONFIG)
 	touch $(KERNEL_WORK)/config.done
 
-mrproper: $(KERNEL_WORK)/src/done
+mrproper: $(KERNEL_WORK)/src.done
 	$(MAKE) $(MAKE_ARGS) mrproper
 
 ###############################################################################
