Switch default console to tty1
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22657 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/OrangePiZero2W.config
+++ b/bootkernel/kernel/OrangePiZero2W.config
@@ -470,7 +470,7 @@ CONFIG_ARCH_NR_GPIO=0
 #
 # Boot options
 #
-CONFIG_CMDLINE="console=ttyS0,115200 OPTIONS=0x012C"
+CONFIG_CMDLINE="console=tty1 OPTIONS=0x012C"
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
