Derive TARBALL from BOOTKERNELTGZ
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22674 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/Makefile
+++ b/bootkernel/Makefile
@@ -26,7 +26,7 @@ MUNTSOS		:= $(shell pwd)/..
 include $(MUNTSOS)/include/$(BOARDNAME).mk
 
 DESTDIR         = fakeroot
-TARBALL         = $(BOARDNAME)-Kernel.tgz
+TARBALL         = $(shell basename $(BOOTKERNELTGZ))
 
 REVISION	?= test
 
