Added support for USB Gadget mode to the Raspberry Pi 5 kernel.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22680 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -738,6 +738,16 @@ ifeq ($(BOARDNAME), "RaspberryPi4")
 	echo "#usb0_peer=10.254.254.253"		    >>	$@/etc/network.conf
 	chmod 444						$@/etc/network.conf
 endif
+ifeq ($(BOARDNAME), "RaspberryPi5")
+	chmod 644						$@/etc/network.conf
+	echo ""						    >>	$@/etc/network.conf
+	echo "# USB Network Gadget interface configuration" >>  $@/etc/network.conf
+	echo ""						    >>	$@/etc/network.conf
+	echo "#usb0_address=10.254.254.252"		    >>  $@/etc/network.conf
+	echo "#usb0_netmask=255.255.255.248"		    >>  $@/etc/network.conf
+	echo "#usb0_peer=10.254.254.253"		    >>	$@/etc/network.conf
+	chmod 444						$@/etc/network.conf
+endif
 	install -cm 0444 nsswitch.conf				$@/etc
 	install -cm 0444 ntp.conf				$@/etc
 	install -cm 0444 passwd					$@/etc
