Use SRCURL macro
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22681 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/socat/Makefile
+++ b/extensions/socat/Makefile
@@ -44,7 +44,7 @@ default: package.deb
 # Unpack the source distribution
 
 src.done:
-	git clone https://repo.or.cz/socat.git src
+	git clone $(SRCURL) src
 	cd src && git checkout $(SRCTAG)
 	cd src && autoconf -i
 	touch $@
