Moved Orange Pi Zero 2W WiFi firmware to uwe5622/
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22703 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -833,7 +833,7 @@ endif
 ifneq ($(findstring OrangePi, $(BOARDNAME)),)
 	# Firmware for the Orange Pi Zero 2W Wireless built-in WLAN interface
 	mkdir -p										$@/lib/firmware
-	install -cm 0644 wcnmodem.bin								$@/lib/firmware
+	install -cm 0644 uwe5622/*								$@/lib/firmware
 endif
 
 ifneq ($(findstring RaspberryPi1, $(BOARDNAME)),)
