--- a/bootkernel/kernel/RaspberryPi2.config
+++ b/bootkernel/kernel/RaspberryPi2.config
@@ -1351,7 +1351,7 @@ CONFIG_USB_PEGASUS=y
 CONFIG_USB_LAN78XX=y
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_AX8817X=y
-# CONFIG_USB_NET_AX88179_178A is not set
+CONFIG_USB_NET_AX88179_178A=y
 CONFIG_USB_NET_CDCETHER=y
 CONFIG_USB_NET_CDC_EEM=y
 # CONFIG_USB_NET_CDC_NCM is not set
