Change the build directory from .build to build.d Patch glibc to suppress static linking warning.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22845 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile
+++ b/toolchain/crosstool/Makefile
@@ -167,7 +167,7 @@ clean:
 
 reallyclean: clean
 	-chmod -R u+w gcc*
-	rm -rf .build .config* build* config* *.done gcc* include
+	rm -rf .config* build* config* *.done gcc* include
 
 distclean: reallyclean
 	rm -rf distfiles
