--- a/toolchain/crosstool/AArch64.config
+++ b/toolchain/crosstool/AArch64.config
@@ -53,7 +53,7 @@ CT_EXPERIMENTAL=y
 CT_LOCAL_TARBALLS_DIR="${CT_TOP_DIR}/distfiles"
 CT_SAVE_TARBALLS=y
 # CT_TARBALLS_BUILDROOT_LAYOUT is not set
-CT_WORK_DIR="${CT_TOP_DIR}/.build"
+CT_WORK_DIR="${CT_TOP_DIR}/build.d"
 CT_BUILD_TOP_DIR="${CT_WORK_DIR:-${CT_TOP_DIR}/.build}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
 CT_BUILD_DIR="${CT_BUILD_TOP_DIR}/build"
 CT_PREFIX_DIR="${CT_TOP_DIR}/gcc-${CT_TARGET}"
@@ -91,12 +91,14 @@ CT_VERIFY_DOWNLOAD_DIGEST_ALG="sha512"
 # CT_FORCE_EXTRACT is not set
 CT_OVERRIDE_CONFIG_GUESS_SUB=y
 # CT_ONLY_EXTRACT is not set
-CT_PATCH_BUNDLED=y
+# CT_PATCH_BUNDLED is not set
 # CT_PATCH_LOCAL is not set
-# CT_PATCH_BUNDLED_LOCAL is not set
+CT_PATCH_BUNDLED_LOCAL=y
 # CT_PATCH_LOCAL_BUNDLED is not set
 # CT_PATCH_NONE is not set
-CT_PATCH_ORDER="bundled"
+CT_PATCH_ORDER="bundled,local"
+CT_PATCH_USE_LOCAL=y
+CT_LOCAL_PATCH_DIR="${CT_TOP_DIR}/local-patches"
 
 #
 # Build behavior
@@ -691,10 +693,10 @@ CT_CC_GCC_LIBSTDCXX=y
 # Misc. obscure options.
 #
 CT_CC_CXA_ATEXIT=y
-CT_CC_GCC_TM_CLONE_REGISTRY=m
+# CT_CC_GCC_TM_CLONE_REGISTRY is not set
 # CT_CC_GCC_DISABLE_PCH is not set
-CT_CC_GCC_SJLJ_EXCEPTIONS=m
-CT_CC_GCC_LDBL_128=m
+# CT_CC_GCC_SJLJ_EXCEPTIONS is not set
+# CT_CC_GCC_LDBL_128 is not set
 # CT_CC_GCC_BUILD_ID is not set
 CT_CC_GCC_LNK_HASH_STYLE_DEFAULT=y
 # CT_CC_GCC_LNK_HASH_STYLE_SYSV is not set
@@ -819,48 +821,8 @@ CT_ALL_DEBUG_CHOICES="DUMA GDB LTRACE STRACE"
 # Companion libraries
 #
 # CT_COMPLIBS_CHECK is not set
-CT_COMP_LIBS_CLOOG=y
-CT_COMP_LIBS_CLOOG_PKG_KSYM="CLOOG"
-CT_CLOOG_DIR_NAME="cloog"
-CT_CLOOG_PKG_NAME="cloog"
-CT_CLOOG_SRC_RELEASE=y
-# CT_CLOOG_SRC_DEVEL is not set
-# CT_CLOOG_SRC_CUSTOM is not set
-CT_CLOOG_PATCH_GLOBAL=y
-# CT_CLOOG_PATCH_BUNDLED is not set
-# CT_CLOOG_PATCH_LOCAL is not set
-# CT_CLOOG_PATCH_BUNDLED_LOCAL is not set
-# CT_CLOOG_PATCH_LOCAL_BUNDLED is not set
-# CT_CLOOG_PATCH_NONE is not set
-CT_CLOOG_PATCH_ORDER="global"
-CT_CLOOG_V_0_18_4=y
-CT_CLOOG_VERSION="0.18.4"
-CT_CLOOG_MIRRORS="http://www.bastoul.net/cloog/pages/download"
-CT_CLOOG_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_CLOOG_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_CLOOG_ARCHIVE_FORMATS=".tar.gz"
-CT_CLOOG_SIGNATURE_FORMAT=""
-CT_COMP_LIBS_EXPAT=y
-CT_COMP_LIBS_EXPAT_PKG_KSYM="EXPAT"
-CT_EXPAT_DIR_NAME="expat"
-CT_EXPAT_PKG_NAME="expat"
-CT_EXPAT_SRC_RELEASE=y
-# CT_EXPAT_SRC_DEVEL is not set
-# CT_EXPAT_SRC_CUSTOM is not set
-CT_EXPAT_PATCH_GLOBAL=y
-# CT_EXPAT_PATCH_BUNDLED is not set
-# CT_EXPAT_PATCH_LOCAL is not set
-# CT_EXPAT_PATCH_BUNDLED_LOCAL is not set
-# CT_EXPAT_PATCH_LOCAL_BUNDLED is not set
-# CT_EXPAT_PATCH_NONE is not set
-CT_EXPAT_PATCH_ORDER="global"
-CT_EXPAT_V_2_5=y
-CT_EXPAT_VERSION="2.5.0"
-CT_EXPAT_MIRRORS="http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION} https://github.com/libexpat/libexpat/releases/download/R_${CT_EXPAT_VERSION//./_}"
-CT_EXPAT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_EXPAT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_EXPAT_ARCHIVE_FORMATS=".tar.xz .tar.lz .tar.bz2 .tar.gz"
-CT_EXPAT_SIGNATURE_FORMAT=""
+# CT_COMP_LIBS_CLOOG is not set
+# CT_COMP_LIBS_EXPAT is not set
 CT_COMP_LIBS_GETTEXT=y
 CT_COMP_LIBS_GETTEXT_PKG_KSYM="GETTEXT"
 CT_GETTEXT_DIR_NAME="gettext"
@@ -962,27 +924,7 @@ CT_ISL_later_than_0_18=y
 CT_ISL_0_18_or_later=y
 CT_ISL_later_than_0_15=y
 CT_ISL_0_15_or_later=y
-CT_COMP_LIBS_LIBELF=y
-CT_COMP_LIBS_LIBELF_PKG_KSYM="LIBELF"
-CT_LIBELF_DIR_NAME="libelf"
-CT_LIBELF_PKG_NAME="libelf"
-CT_LIBELF_SRC_RELEASE=y
-# CT_LIBELF_SRC_DEVEL is not set
-# CT_LIBELF_SRC_CUSTOM is not set
-CT_LIBELF_PATCH_GLOBAL=y
-# CT_LIBELF_PATCH_BUNDLED is not set
-# CT_LIBELF_PATCH_LOCAL is not set
-# CT_LIBELF_PATCH_BUNDLED_LOCAL is not set
-# CT_LIBELF_PATCH_LOCAL_BUNDLED is not set
-# CT_LIBELF_PATCH_NONE is not set
-CT_LIBELF_PATCH_ORDER="global"
-CT_LIBELF_V_0_8=y
-CT_LIBELF_VERSION="0.8.13"
-CT_LIBELF_MIRRORS="https://fossies.org/linux/misc/old http://oe-lite.org/mirror/libelf/ http://ftp.osuosl.org/pub/blfs/conglomeration/libelf/"
-CT_LIBELF_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_LIBELF_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_LIBELF_ARCHIVE_FORMATS=".tar.gz"
-CT_LIBELF_SIGNATURE_FORMAT=""
+# CT_COMP_LIBS_LIBELF is not set
 CT_COMP_LIBS_LIBICONV=y
 CT_COMP_LIBS_LIBICONV_PKG_KSYM="LIBICONV"
 CT_LIBICONV_DIR_NAME="libiconv"
@@ -1082,51 +1024,8 @@ CT_NCURSES_HOST_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
 CT_NCURSES_TARGET_CONFIG_ARGS=""
 # CT_NCURSES_TARGET_DISABLE_DB is not set
 CT_NCURSES_TARGET_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
-CT_COMP_LIBS_ZLIB=y
-CT_COMP_LIBS_ZLIB_PKG_KSYM="ZLIB"
-CT_ZLIB_DIR_NAME="zlib"
-CT_ZLIB_PKG_NAME="zlib"
-CT_ZLIB_SRC_RELEASE=y
-# CT_ZLIB_SRC_DEVEL is not set
-# CT_ZLIB_SRC_CUSTOM is not set
-CT_ZLIB_PATCH_GLOBAL=y
-# CT_ZLIB_PATCH_BUNDLED is not set
-# CT_ZLIB_PATCH_LOCAL is not set
-# CT_ZLIB_PATCH_BUNDLED_LOCAL is not set
-# CT_ZLIB_PATCH_LOCAL_BUNDLED is not set
-# CT_ZLIB_PATCH_NONE is not set
-CT_ZLIB_PATCH_ORDER="global"
-CT_ZLIB_V_1_3_1=y
-# CT_ZLIB_V_1_2_13 is not set
-CT_ZLIB_VERSION="1.3.1"
-CT_ZLIB_MIRRORS="https://github.com/madler/zlib/releases/download/v${CT_ZLIB_VERSION} https://www.zlib.net/"
-CT_ZLIB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_ZLIB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_ZLIB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
-CT_ZLIB_SIGNATURE_FORMAT="packed/.asc"
-CT_COMP_LIBS_ZSTD=y
-CT_COMP_LIBS_ZSTD_PKG_KSYM="ZSTD"
-CT_ZSTD_DIR_NAME="zstd"
-CT_ZSTD_PKG_NAME="zstd"
-CT_ZSTD_SRC_RELEASE=y
-# CT_ZSTD_SRC_DEVEL is not set
-# CT_ZSTD_SRC_CUSTOM is not set
-CT_ZSTD_PATCH_GLOBAL=y
-# CT_ZSTD_PATCH_BUNDLED is not set
-# CT_ZSTD_PATCH_LOCAL is not set
-# CT_ZSTD_PATCH_BUNDLED_LOCAL is not set
-# CT_ZSTD_PATCH_LOCAL_BUNDLED is not set
-# CT_ZSTD_PATCH_NONE is not set
-CT_ZSTD_PATCH_ORDER="global"
-CT_ZSTD_V_1_5_6=y
-# CT_ZSTD_V_1_5_5 is not set
-# CT_ZSTD_V_1_5_2 is not set
-CT_ZSTD_VERSION="1.5.6"
-CT_ZSTD_MIRRORS="https://github.com/facebook/zstd/releases/download/v${CT_ZSTD_VERSION} https://www.zstd.net/"
-CT_ZSTD_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_ZSTD_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_ZSTD_ARCHIVE_FORMATS=".tar.gz"
-CT_ZSTD_SIGNATURE_FORMAT="packed/.sig"
+# CT_COMP_LIBS_ZLIB is not set
+# CT_COMP_LIBS_ZSTD is not set
 CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP GNUPRUMCU ISL LIBELF LIBICONV MPC MPFR NCURSES NEWLIB_NANO PICOLIBC ZLIB ZSTD"
 CT_LIBICONV_NEEDED=y
 CT_GETTEXT_NEEDED=y
@@ -1135,8 +1034,8 @@ CT_MPFR_NEEDED=y
 CT_ISL_NEEDED=y
 CT_MPC_NEEDED=y
 CT_NCURSES_NEEDED=y
-CT_ZLIB_NEEDED=y
-CT_ZSTD_NEEDED=y
+# CT_ZLIB_NEEDED is not set
+# CT_ZSTD_NEEDED is not set
 CT_LIBICONV=y
 CT_GETTEXT=y
 CT_GMP=y
@@ -1144,8 +1043,6 @@ CT_MPFR=y
 CT_ISL=y
 CT_MPC=y
 CT_NCURSES=y
-CT_ZLIB=y
-CT_ZSTD=y
 # end of Companion libraries
 
 #
