make clean needs to remove ._libmodbus*, too.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22846 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -1147,7 +1147,7 @@ clean:
 	rm -rf $(PKGDIR) $(PKGFILE)
 
 reallyclean: clean
-	rm -rf *.o $(INSTALLDIR) $(SRCDIRS)
+	rm -rf *.o $(INSTALLDIR) $(SRCDIRS) ._libmodbus*
 
 distclean: reallyclean
 	rm -f $(DISTFILES)
