Fold reallyclean target into clean.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22852 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libaws/Makefile
+++ b/toolchain/libaws/Makefile
@@ -89,9 +89,8 @@ package.deb: $(PKGFILE)
 # Remove working files
 
 clean:
-	rm -rf $(PKGDIR) $(PKGFILE)
+	rm -rf *.a obj src/aws-os_lib.ads $(PKGDIR) $(PKGFILE)
 
 reallyclean: clean
-	rm -rf *.a obj src/aws-os_lib.ads
 
 distclean: reallyclean
