BeaglePlay User LED is USR4
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22878 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -763,8 +763,11 @@ endif
 	sed -i 's/@@REVISION@@/$(REVISION)/g'			$@/etc/rc
 	sed -i 's/@@TOOLCHAINBUILDER@@/$(TOOLCHAIN_BUILDER)/g'	$@/etc/rc
 	sed -i 's/@@TOOLCHAINREVISION@@/$(TOOLCHAIN_REV)/g'	$@/etc/rc
-ifneq ($(findstring Beagle, $(BOARDNAME)),)
+ifeq ($(BOARDBASE), BeagleBone)
 	sed -i 's#@@USERLED@@#/sys/class/leds/beaglebone\:green\:usr0#g' $@/etc/rc
+endif
+ifeq ($(BOARDNAME), BeaglePlay)
+	sed -i 's#@@USERLED@@#/sys/class/leds/beaglebone\:green\:usr4#g' $@/etc/rc
 endif
 ifneq ($(findstring OrangePi, $(BOARDNAME)),)
 ifeq ($(KERNEL_BRANCH), 6.1)
