Include sample configs in /usr/local/share/lpc1114/
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22905 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/lpc1114/Makefile
+++ b/extensions/lpc1114/Makefile
@@ -151,6 +151,7 @@ $(PKGDIR): $(COMPONENTS)
 	mkdir -p										$@/usr/local/lib/firmware
 	mkdir -p										$@/usr/local/lib/python3
 	mkdir -p										$@/usr/local/libexec
+	mkdir -p										$@/usr/local/share/lpc1114
 	install -cm 0755 $(RASPBERRYPI_LPC1114_SRC)/utils/lpc21isp/lpc21isp			$@/usr/local/bin
 	install -cm 0755 $(RASPBERRYPI_LPC1114_SRC)/spi-agent-lib/clients/c/spi_agent_test	$@/usr/local/bin
 ifneq ($(findstring BeagleBone,$(BOARDNAME)),)
@@ -183,6 +184,7 @@ endif
 	install -cm 0755 $(RASPBERRYPI_LPC1114_SRC)/spi-agent-remoteio/spi_agent_remoteio_server	$@/usr/local/libexec
 	install -cm 0755 $(RASPBERRYPI_LPC1114_SRC)/spi-agent-xmlrpc/spi_agent_xmlrpc_server	$@/usr/local/libexec
 	install -cm 0755 $(RASPBERRYPI_LPC1114_SRC)/spi-agent-zeromq/spi_agent_zeromq_server	$@/usr/local/libexec
+	install -cm 0644 expansion_lpc1114.config.*						$@/usr/local/share/lpc1114
 	find $@ -type f -exec $(CROSS_COMPILE)strip {} ";" >/dev/null 2>&1
 	touch $@
 
