Enable serial port on the Grove socket.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22913 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/boot/BeaglePlay/overlays/grove-serial.dts
+++ b/boot/BeaglePlay/overlays/grove-serial.dts
@@ -9,8 +9,7 @@
 	fragment@0 {
 		target = <&main_uart1>;
 		__overlay__ {
-			pinctrl-names = "default";
-			pinctrl-0 = <&grove_uart_pins>;
+			status = "okay";
 		};
 	};
 };
