Target main_gpio1 instead of main_i2c1
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22914 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/boot/BeaglePlay/overlays/grove-gpio.dts
+++ b/boot/BeaglePlay/overlays/grove-gpio.dts
@@ -7,10 +7,10 @@
 	compatible = "beagle,am625-beagleplay";
 
 	fragment@0 {
-		target = <&main_i2c1>;
+		target = <&main_gpio1>;
 		__overlay__ {
 			pinctrl-names = "default";
-			pinctrl-0 = <&grove_gpio_pins>;
+			pinctrl-0 = <&mikrobus_gpio_pins_default>, <&grove_gpio_pins>;
 		};
 	};
 };
