--- a/boot/BeaglePlay/overlays/grove-gpio.dts
+++ b/boot/BeaglePlay/overlays/grove-gpio.dts
@@ -1,4 +1,4 @@
-// Configure Grove socket as GPIO
+// Change Grove socket from I2C to GPIO
 
 /dts-v1/;
 /plugin/;
@@ -7,6 +7,13 @@
 	compatible = "beagle,am625-beagleplay";
 
 	fragment@0 {
+		target = <&main_i2c1>;
+		__overlay__ {
+			status = "disabled";
+		};
+	};
+
+	fragment@1 {
 		target = <&main_gpio1>;
 		__overlay__ {
 			pinctrl-names = "default";
