Force busybox rebuild in rebuild target
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22936 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/Makefile
+++ b/bootkernel/Makefile
@@ -97,6 +97,7 @@ rebuild:
 	rm -f $(KERNEL_WORK)/config.done
 	rm -rf $(KERNEL_WORK)/dtbs
 	rm -f $(KERNEL_WORK)/dtbs.done
+	rm -rf initramfs/busy*/skeleton
 	rm -rf initramfs/initramfs.*
 	rm -f $(KERNEL_WORK)/initramfs.done
 	rm -rf $(KERNEL_WORK)/modules
