Added $(MAKE) -C $(MUNTSOS)/boot/BeaglePlay/overlays clean
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22953 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/Makefile
+++ b/bootkernel/Makefile
@@ -132,6 +132,7 @@ reallyclean: clean
 	$(MAKE) -C kernel reallyclean
 	rm -rf *.tgz *.downloaded
 	$(MAKE) -C $(MUNTSOS)/boot/BeagleBone/overlays clean
+	$(MAKE) -C $(MUNTSOS)/boot/BeaglePlay/overlays clean
 	$(MAKE) -C $(MUNTSOS)/boot/OrangePiZero2W/overlays clean
 	$(MAKE) -C $(MUNTSOS)/boot/RaspberryPi/overlays clean
 
